--- a/trunk/protons/gwt/src/main/java/it/mate/protons/client/view/HomeView.ui.xml
+++ b/trunk/protons/gwt/src/main/java/it/mate/protons/client/view/HomeView.ui.xml
@@ -4,7 +4,7 @@
        ui:generateFormat='com.google.gwt.i18n.rebind.format.PropertiesFormat'
        ui:generateLocales="default" xmlns:o="urn:import:it.mate.onscommons.client.ui">
        
-  <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="ui-wrapper-panel">
+  <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="app-page-wrapper-panel">
      
     <o:OnsPage>
     
@@ -14,11 +14,12 @@
   
       <g:VerticalPanel width="100%" horizontalAlignment="center">
         <o:OnsButton text="Settings" ui:field="btnSettings"></o:OnsButton>
-        <g:Label ui:field="homeLbl" addStyleNames="ui-home-lbl"/>
+        <g:Label ui:field="counterLbl"></g:Label>
       </g:VerticalPanel>
       
+      <g:Label ui:field="homeLbl" addStyleNames="app-home-lbl"/>
+      
     </o:OnsPage>
-     
     
   </g:HTMLPanel>
   
