--- a/trunk/protons/gwt/src/main/java/it/mate/protons/client/view/SettingsView.ui.xml
+++ b/trunk/protons/gwt/src/main/java/it/mate/protons/client/view/SettingsView.ui.xml
@@ -5,22 +5,28 @@
        ui:generateLocales="default" xmlns:o="urn:import:it.mate.onscommons.client.ui">
        
   <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="app-page-wrapper-panel">
+  
+    
 
     <o:OnsPage>
-    
     
       <o:OnsToolbar>
         <div class="left">
           <o:OnsBackButton text="Back"/>
         </div>
         <div class="center">Second Toolbar</div>
+        <div class="right">
+          <o:OnsToolbarButton ui:field="btnRight"><o:OnsIcon icon="fa-bars"/></o:OnsToolbarButton>
+        </div>
       </o:OnsToolbar>
   
       <div>Settings view!</div>  
       
       <o:OnsButton text="Pop" ui:field="btnPop"></o:OnsButton>
       
-      <g:Label ui:field="counterLbl"></g:Label>
+      <o:OnsButton text="Sub settings" ui:field="btnSubSettings"></o:OnsButton>
+      
+      <o:OnsLabel ui:field="counterLbl"/>
       
     </o:OnsPage>
     
