--- a/trunk/protons/gwt/src/main/java/it/mate/protons/client/view/ApplicationListView.ui.xml
+++ b/trunk/protons/gwt/src/main/java/it/mate/protons/client/view/ApplicationListView.ui.xml
@@ -5,23 +5,20 @@
        ui:generateLocales="default" xmlns:o="urn:import:it.mate.onscommons.client.ui">
        
   <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="app-page-wrapper-panel">
-     
+  
     <o:OnsPage>
     
       <o:OnsToolbar>
         <div class="left">
-          <o:OnsToolbarButton ui:field="btnMenu" visible="false"><o:OnsIcon icon="fa-bars"/></o:OnsToolbarButton>
+          <o:OnsBackButton text="Back"/>
         </div>
-        <div class="center">Home</div>
+        <div class="center">Applications</div>
+        <div class="right">
+          <o:OnsToolbarButton ui:field="btnAdd"><o:OnsIcon icon="fa-plus-circle"/></o:OnsToolbarButton>
+        </div>
       </o:OnsToolbar>
-  
-      <g:VerticalPanel width="100%" horizontalAlignment="center">
-        <o:OnsButton text="Search" ui:field="btnSearch"/>
-        <o:OnsButton text="Settings" ui:field="btnSettings"/>
-        <g:Label ui:field="counterLbl"/>
-      </g:VerticalPanel>
       
-      <g:Label ui:field="homeLbl" addStyleNames="app-home-lbl"/>
+      <o:OnsList ui:field="listPanel"/>
       
     </o:OnsPage>
     
