--- a/trunk/protons/gwt/src/main/java/it/mate/protons/client/view/IngredientSub1View.ui.xml
+++ b/trunk/protons/gwt/src/main/java/it/mate/protons/client/view/IngredientSub1View.ui.xml
@@ -15,6 +15,8 @@
         <div class="center">Ingredients / Sub 1</div>
       </o:OnsToolbar>
       
+      <div>Sub1</div>
+      
     </o:OnsPage>
     
   </g:HTMLPanel>
