--- a/copymob/gwt/src/main/java/it/mate/copymob/client/view/TimbroEditView.ui.xml
+++ b/copymob/gwt/src/main/java/it/mate/copymob/client/view/TimbroEditView.ui.xml
@@ -5,7 +5,8 @@
        ui:generateLocales="default" xmlns:o="urn:import:it.mate.onscommons.client.ui">
        
   <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="app-page-wrapper-panel">
-
+  
+  
     <o:OnsPage>
     
       <o:OnsToolbar>
@@ -15,10 +16,14 @@
         <div class="center">Composizione Timbro</div>
       </o:OnsToolbar>
       
-      <g:HTML addStyleNames="app-home-presentation">
-        <i>Composizione del timbro qui</i>
-      </g:HTML>
-      
+      <g:VerticalPanel width="100%" horizontalAlignment="center">
+        <g:HTML>
+          <i>Composizione del timbro qui</i>
+        </g:HTML>
+        <o:OnsTextBox ui:field="row0"/>
+        <o:OnsTextBox ui:field="row1"/>
+        <o:OnsTextBox ui:field="row2"/>
+      </g:VerticalPanel>
       <o:OnsButton text="Save" ui:field="btnSave" addStyleNames="app-timbri-choose-btn"/>
       
     </o:OnsPage>
