--- a/copymob/gwt/src/main/java/it/mate/copymob/client/view/TimbriListView.ui.xml
+++ b/copymob/gwt/src/main/java/it/mate/copymob/client/view/TimbriListView.ui.xml
@@ -5,7 +5,7 @@
        ui:generateLocales="default" xmlns:o="urn:import:it.mate.onscommons.client.ui">
        
   <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="app-page-wrapper-panel">
-
+  
     <o:OnsPage>
     
       <o:OnsToolbar>
@@ -15,7 +15,14 @@
         <div class="center">Elenco Timbri</div>
       </o:OnsToolbar>
       
-      <o:OnsCarousel addStyleNames="app-timbri-carousel" autoscroll="true" draggable="true" ui:field="carousel"/>
+      <o:OnsHorizontalPanel width="100%" height="100%" horizontalAlignment="center" addStyleNames="app-timbri-carousel-panel">
+        <o:OnsCarousel addStyleNames="app-timbri-carousel" autoscroll="true" draggable="true" ui:field="carousel"/>
+      </o:OnsHorizontalPanel> 
+      
+      <!-- 
+      <g:HorizontalPanel width="100%" horizontalAlignment="center">
+      </g:HorizontalPanel>
+       -->
       
       <o:OnsButton text="Acquista" ui:field="btnBuy" addStyleNames="app-timbri-choose-btn"/>
       
