--- a/copymob/gwt/src/main/java/it/mate/copymob/client/ui/theme/css/main.css
+++ b/copymob/gwt/src/main/java/it/mate/copymob/client/ui/theme/css/main.css
@@ -40,13 +40,17 @@
 }
 
 .app-timbri-carousel {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
 }
 
-.app-timbri-carousel ons-carousel-item {
+.app-timbri-carousel ons-carousel-item, .app-timbri-carousel-panel {
   background-color: rgb(228, 241, 255);
-  padding: 0.5em;
+  /* padding: 0.5em; */
+}
+
+.app-timbri-carousel-panel {
+  padding-top: 5%;
 }
 
 .app-carousel-item-inner {
@@ -83,7 +87,8 @@
 
 .app-home-buttonbar .ons-button.app-btn-img2 {
   background: url(main/images/stamp-64w.png) no-repeat 1.4em 0.75em;
-  background-color: rgba(24,103,194,0.81);
+  /*  background-color: rgba(24,103,194,0.81);  */
+  background-color: #14b9d6;
   background-size: 1.6em;
   padding-left: 3.3em;
 }
@@ -94,11 +99,22 @@
 }
 
 .app-edit-btn-cfg {
+  /*
   background-color: transparent;
   color: rgba(24,103,194,0.81);
   height: 2em;
   padding: 0;
   padding-left: 0.5em;
+  */
+  color: rgba(24, 103, 194, 0.81);
+  height: 2em;
+  padding: 0;
+  padding-left: 0.5em;
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  width: 2em;
+  margin-top: -0.2em;
 }
 
 .app-edit-text {
@@ -123,14 +139,24 @@
 }
 
 .app-edit-controlbar-btn {
-  background-color: gray;
-  width: 32px;
+  /* background-color: gray; */
+  width: 36px;
   height: 32px;
   padding: 0;
+  line-height: 1.4em;
+  padding-top: 0.2em;
+  font-size: 0.9em;
+  margin-left: 0.06em;
 }
 
 .app-edit-controlbar-btn .ons-icon {
   width: 32px;
+}
+
+.app-edit-controlbar-btn-size-text {
+  background: #f9f9f9;
+  color: black;
+  padding-top: 0.25em;
 }
 
 .app-bold {
@@ -158,13 +184,19 @@
 }
 
 .app-edit-fontsizebar-btn {
-  background-color: rgb(220, 230, 246);
+  background: rgb(220, 230, 246);
   width: 32px;
   height: 32px;
   padding: 0;
   color: rgb(0, 0, 0);
+  margin-bottom: 0.1em;
 }
 
+.app-edit-fontsizebar-btn-selected {
+  border-width: 3px;
+}
+
+/*
 .app-edit-fontsizebar-btn-8 {
   font-size: 1em;
 }
@@ -180,3 +212,4 @@
 .app-edit-fontsizebar-btn-12 {
   font-size: 1.4em;
 }
+*/
