--- a/copymob/gwt/src/main/java/it/mate/copymob/client/view/OrderItemComposeView.ui.xml
+++ b/copymob/gwt/src/main/java/it/mate/copymob/client/view/OrderItemComposeView.ui.xml
@@ -18,45 +18,58 @@
       
       <g:VerticalPanel width="100%" horizontalAlignment="center">
         <g:HTML>
-          <i>Componi qui il test del timbro</i>
+          <i>Componi il test del timbro</i>
         </g:HTML>
       </g:VerticalPanel>
       
       <o:OnsScroller height="80%" width="100%" ui:field="scroller">
         <o:OnsList ui:field="rowsPanel"/>
-        <!-- 
-        <o:OnsVerticalPanel width="100%" horizontalAlignment="center" ui:field="rowsPanel"/>
-         -->
       </o:OnsScroller>
       
       
       <o:OnsButton text="Save" ui:field="btnSave" addStyleNames="app-timbri-choose-btn"/>
 
-      <g:HorizontalPanel ui:field="controlbar" addStyleNames="app-edit-controlbar">
-        <o:OnsButton ui:field="btnEdtSize" icon="fa-text-height" addStyleNames="app-edit-controlbar-btn"/>
-        <!-- 
-        <o:OnsButton ui:field="btnEdtSizeText" text="12" addStyleNames="app-edit-controlbar-btn app-edit-controlbar-btn-size-text"/>
-         -->
-        <o:OnsButton ui:field="btnEdtFont" icon="fa-font" addStyleNames="app-edit-controlbar-btn"/>
-        <o:OnsButton ui:field="btnEdtBold" icon="fa-bold" addStyleNames="app-edit-controlbar-btn"/>
-        <o:OnsButton ui:field="btnEdtItalic" icon="fa-italic" addStyleNames="app-edit-controlbar-btn"/>
-        <o:OnsButton ui:field="btnEdtUnderline" icon="fa-underline" addStyleNames="app-edit-controlbar-btn"/>
-        <o:OnsButton ui:field="btnEdtAlignLeft" icon="fa-align-left" addStyleNames="app-edit-controlbar-btn"/>
-        <o:OnsButton ui:field="btnEdtAlignCenter" icon="fa-align-center" addStyleNames="app-edit-controlbar-btn"/>
-        <o:OnsButton ui:field="btnEdtAlignRight" icon="fa-align-right" addStyleNames="app-edit-controlbar-btn"/>
+      <g:HorizontalPanel ui:field="controlbar" addStyleNames="app-edit-controlbar-2" spacing="0">
+        <o:OnsButton ui:field="btnEdtSize" icon="fa-text-height" addStyleNames="app-edit-controlbar-2-btn"/>
+        <o:OnsButton ui:field="btnEdtFont" icon="fa-font" addStyleNames="app-edit-controlbar-2-btn"/>
+        <o:OnsButton ui:field="btnEdtBold" icon="fa-bold" addStyleNames="app-edit-controlbar-2-btn"/>
+        <o:OnsButton ui:field="btnEdtItalic" icon="fa-italic" addStyleNames="app-edit-controlbar-2-btn"/>
+        <o:OnsButton ui:field="btnEdtUnderline" icon="fa-underline" addStyleNames="app-edit-controlbar-2-btn"/>
+        <o:OnsButton ui:field="btnEdtAlignLeft" icon="fa-align-left" addStyleNames="app-edit-controlbar-2-btn"/>
+        <o:OnsButton ui:field="btnEdtAlignCenter" icon="fa-align-center" addStyleNames="app-edit-controlbar-2-btn"/>
+        <o:OnsButton ui:field="btnEdtAlignRight" icon="fa-align-right" addStyleNames="app-edit-controlbar-2-btn"/>
       </g:HorizontalPanel>
-      
-      <g:VerticalPanel ui:field="fontsizebar" addStyleNames="app-edit-fontsizebar">
-        <o:OnsButton ui:field="btnFntSize8" addStyleNames="app-edit-fontsizebar-btn app-edit-fontsizebar-btn-8" text="8"/>
-        <o:OnsButton ui:field="btnFntSize9" addStyleNames="app-edit-fontsizebar-btn app-edit-fontsizebar-btn-9" text="9"/>
-        <o:OnsButton ui:field="btnFntSize10" addStyleNames="app-edit-fontsizebar-btn app-edit-fontsizebar-btn-10" text="10"/>
-        <o:OnsButton ui:field="btnFntSize11" addStyleNames="app-edit-fontsizebar-btn app-edit-fontsizebar-btn-11" text="11"/>
-        <o:OnsButton ui:field="btnFntSize12" addStyleNames="app-edit-fontsizebar-btn app-edit-fontsizebar-btn-12" text="12"/>
-      </g:VerticalPanel>
-      
+
       <gc:Spacer ui:field="viewfinder" addStyleNames="app-viewfinder" visible="false" width="4px" height="4px"/>
       
+      <o:OnsDialog ui:field="fontSizeDialog">
+        <o:OnsList>
+          <o:OnsListItem ui:field="btnFntSize8" value="8"><input type="radio" id="btnFntSize8"/>8 points</o:OnsListItem>
+          <o:OnsListItem ui:field="btnFntSize9" value="9"><input type="radio" id="btnFntSize9"/>9 points</o:OnsListItem>
+          <o:OnsListItem ui:field="btnFntSize10" value="10"><input type="radio" id="btnFntSize10"/>10 points</o:OnsListItem>
+          <o:OnsListItem ui:field="btnFntSize11" value="11"><input type="radio" id="btnFntSize11"/>11 points</o:OnsListItem>
+          <o:OnsListItem ui:field="btnFntSize12" value="12"><input type="radio" id="btnFntSize12"/>12 points</o:OnsListItem>
+          <o:OnsListItem>
+            <o:OnsButton ui:field="fontSizeCancelBtn" text="Annulla"></o:OnsButton>
+          </o:OnsListItem>
+        </o:OnsList>
+      </o:OnsDialog>
+      
+      <o:OnsDialog ui:field="fontFamilyDialog">
+        <o:OnsList>
+          <o:OnsListItem ui:field="btnFntFamGeorgia" value="Georgia, serif"><input type="radio" id="btnFntFamGeorgia"/>Georgia</o:OnsListItem>
+          <o:OnsListItem ui:field="btnFntFamPalatino" value="'Palatino Linotype', 'Book Antiqua', Palatino, serif"><input type="radio" id="btnFntFamPalatino"/>Palatino</o:OnsListItem>
+          <o:OnsListItem ui:field="btnFntFamTimes" value="'Times New Roman', Times, serif"><input type="radio" id="btnFntFamTimes"/>Times</o:OnsListItem>
+          <o:OnsListItem ui:field="btnFntFamArial" value="Arial, Helvetica, sans-serif"><input type="radio" id="btnFntFamArial"/>Arial</o:OnsListItem>
+          <o:OnsListItem>
+            <o:OnsButton ui:field="fontFamCancelBtn" text="Annulla"></o:OnsButton>
+          </o:OnsListItem>
+        </o:OnsList>
+      </o:OnsDialog>
+      
     </o:OnsPage>
+    
+    
     
   </g:HTMLPanel>
   
