--- a/copymob/gwt/src/main/java/it/mate/copymob/client/view/OrderItemComposeView.ui.xml
+++ b/copymob/gwt/src/main/java/it/mate/copymob/client/view/OrderItemComposeView.ui.xml
@@ -11,7 +11,7 @@
     
       <o:OnsToolbar>
         <div class="left">
-          <o:OnsBackButton text="Back"/>
+          <o:OnsBackButton/>
         </div>
         <div class="center">Composizione Timbro</div>
       </o:OnsToolbar>
