--- a/copymob/gwt/src/main/java/it/mate/copymob/client/view/OrderItemEditView.ui.xml
+++ b/copymob/gwt/src/main/java/it/mate/copymob/client/view/OrderItemEditView.ui.xml
@@ -10,7 +10,7 @@
     
       <o:OnsToolbar>
         <div class="left">
-          <o:OnsBackButton text="Back"/>
+          <o:OnsBackButton/>
         </div>
         <div class="center">Preview Timbro</div>
       </o:OnsToolbar>
