--- a/copymob/gwt/src/main/java/it/mate/copymob/client/view/SettingsView.ui.xml
+++ b/copymob/gwt/src/main/java/it/mate/copymob/client/view/SettingsView.ui.xml
@@ -12,7 +12,7 @@
     
       <o:OnsToolbar>
         <div class="left">
-          <o:OnsBackButton text="Back"/>
+          <o:OnsBackButton/>
         </div>
         <div class="center">Settings</div>
         <div class="right">
